--- a/Machine_learning/project/MLProject.ipynb
+++ b/Machine_learning/project/MLProject.ipynb
@@ -514,6 +514,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Аккуратно с запуском! Здесь перепутаны train и test. Запуск опасен для жизни компа!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 128,
    "metadata": {
@@ -1206,25 +1213,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 305,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y_bin_test_med' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-303-f22b51429a89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'Accuracy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mforest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_med\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0my_bin_test_med\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_bin_test_med\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'y_bin_test_med' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.6201238085879925\n"
      ]
     }
    ],
    "source": [
-    "print ('Accuracy', list(forest.best_estimator_.predict(X_test_med) == y_bin_test_med).count(True) / len(y_bin_test_med))"
+    "print ('Accuracy', list(forest.best_estimator_.predict(X_test_med) == y_bin_test).count(True) / len(y_bin_test))"
    ]
   },
   {
