--- a/Machine_learning/project/MLProject.ipynb
+++ b/Machine_learning/project/MLProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -81,41 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['encounter_id', 'patient_nbr', 'race', 'gender', 'age',\n",
-       "       'admission_type_id', 'discharge_disposition_id', 'admission_source_id',\n",
-       "       'time_in_hospital', 'num_lab_procedures', 'num_procedures',\n",
-       "       'num_medications', 'number_outpatient', 'number_emergency',\n",
-       "       'number_inpatient', 'diag_1', 'diag_2', 'diag_3', 'number_diagnoses',\n",
-       "       'max_glu_serum', 'A1Cresult', 'metformin', 'repaglinide', 'nateglinide',\n",
-       "       'chlorpropamide', 'glimepiride', 'acetohexamide', 'glipizide',\n",
-       "       'glyburide', 'tolbutamide', 'pioglitazone', 'rosiglitazone', 'acarbose',\n",
-       "       'miglitol', 'troglitazone', 'tolazamide', 'examide', 'citoglipton',\n",
-       "       'insulin', 'glyburide-metformin', 'glipizide-metformin',\n",
-       "       'glimepiride-pioglitazone', 'metformin-rosiglitazone',\n",
-       "       'metformin-pioglitazone', 'change', 'diabetesMed', 'readmitted'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -160,14 +126,12 @@
    "source": [
     "# Transform the categorical features\n",
     "\n",
-    "s = 0\n",
+    "s = 1\n",
     "for column in data.columns[:-1]:\n",
     "    LE.fit(data[column])\n",
     "    data[column] = s * LE.transform(data[column])\n",
-    "    s += 1\n",
-    "    \n",
-    "LE.fit(data['readmitted'])\n",
-    "data['readmitted'] = LE.transform(data['readmitted'])"
+    "#     s += 1\n",
+    "    \n"
    ]
   },
   {
@@ -179,18 +143,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label encoding for readmitted [0 1 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "X, y = np.asarray(data[data.columns[2:-1]]), np.asarray(data['readmitted'])\n",
-    "\n",
     "med_col = data.columns[9:-1]\n",
     "drug_col = data.columns[21:-3]\n",
     "X_med = np.asarray(data[med_col])\n",
-    "X_drug = np.asarray(data[drug_col])"
+    "X_drug = np.asarray(data[drug_col])\n",
+    "\n",
+    "LE.fit(data['readmitted'])\n",
+    "data['readmitted'] = LE.transform(data['readmitted'])\n",
+    "print ('Label encoding for readmitted', LE.classes_)\n",
+    "\n",
+    "X, y = np.asarray(data[data.columns[2:-1]]), np.asarray(data['readmitted'])"
    ]
   },
   {
@@ -202,30 +178,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "X_train_med, X_test_med, y_train, y_test = train_test_split(X_med, y, \n",
-    "                                                                    test_size=0.1, random_state=1, stratify=y)"
+    "                                                                    test_size=0.5, random_state=1, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=1, stratify=y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=1, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -245,26 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Label encoding for readmitted ['<30' '>30' 'NO']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print ('Label encoding for readmitted', LE.classes_)"
+    "# LE.fit(data['readmitted'])\n",
+    "# data['readmitted'] = LE.transform(data['readmitted'])\n",
+    "# print ('Label encoding for readmitted', LE.classes_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -292,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "y_bin_train, y_bin_test = binarization(y_train, y_test, param=2)"
+    "y_bin_train, y_bin_test = binarization(y_train, y_test, param=1)"
    ]
   },
   {
@@ -623,6 +593,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### t-SNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting t-SNE...............\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_components = 3\n",
+    "t0 = time()\n",
+    "print('Fitting t-SNE...............')\n",
+    "tsne = TSNE(n_components=n_components)\n",
+    "X_train_tsne = tsne.fit_transform(X_train)\n",
+    "print('Fitting is done in %0.3s' % (time() - t0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "--------"
    ]
   },
@@ -650,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -658,12 +668,12 @@
    "source": [
     "rus = RandomUnderSampler()\n",
     "X_train_med_rus, y_bin_train_rus = rus.fit_sample(X_train_med, y_bin_train)\n",
-    "# X_test_med_rus, y_bin_test_rus = rus.fit_sample(X_test_med, y_bin_test)\n"
+    "X_test_med_rus, y_bin_test_rus = rus.fit_sample(X_test_med, y_bin_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -673,8 +683,8 @@
      "output_type": "stream",
      "text": [
       "Fitting classifier\n",
-      "fitting is done in 110.10718202590942 \n",
-      "Accuracy 0.620320330156\n"
+      "fitting is done in 3.7343549728393555 \n",
+      "Accuracy 0.5\n"
      ]
     }
    ],
@@ -684,7 +694,29 @@
     "t0 = time()\n",
     "AB.fit(X_train_med_rus, y_bin_train_rus)\n",
     "print('fitting is done in %s ' % (time() - t0))\n",
-    "print('Accuracy', accuracy_score(y_pred=AB.predict(X_test_med), y_true=y_bin_test))"
+    "print('Accuracy', accuracy_score(y_pred=AB.predict(X_test_med_rus), y_true=y_bin_test_rus))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10177,)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_bin_test.shape"
    ]
   },
   {
