--- a/Information and coding theory/project/project.ipynb
+++ b/Information and coding theory/project/project.ipynb
@@ -16,122 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data = np.loadtxt('adj_matrix.txt')\n",
-    "n = 56"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "adj_matrix = np.zeros((n, n))\n",
-    "\n",
-    "for i in range(n):\n",
-    "    for j in range(n):\n",
-    "        adj_matrix[i][j] = data[i * n + j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "G = nx.from_numpy_matrix(adj_matrix)\n",
-    "k = len(G.edges())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "num_adj_matrix = np.zeros((n, n))\n",
-    "k = 1\n",
-    "for i in range(n):\n",
-    "    for j in range(i, n):\n",
-    "        if adj_matrix[i][j] == 1:\n",
-    "            num_adj_matrix[i][j] = k\n",
-    "            k += 1\n",
-    "\n",
-    "num_adj_matrix += num_adj_matrix.T\n",
-    "G_num = nx.from_numpy_matrix(num_adj_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "bip_adj_matrix = np.zeros((n+k, n+k))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(len(G.edges())):\n",
-    "    edge = G.edges()[i]\n",
-    "    bip_adj_matrix[edge[0]][n + i] = 1\n",
-    "    bip_adj_matrix[edge[1]][n + i] = 1\n",
-    "\n",
-    "bip_adj_matrix += bip_adj_matrix.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "eigenvalues = np.sort(linalg.eigvals(bip_adj_matrix))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -153,16 +38,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 150.,  304.],\n",
-       "       [ 150.,  249.],\n",
-       "       [ 150.,  146.],\n",
+       "array([[ 0.,  0.],\n",
+       "       [ 0.,  0.],\n",
+       "       [ 0.,  0.],\n",
        "       ..., \n",
-       "       [  46.,   38.],\n",
-       "       [  46.,   88.],\n",
-       "       [  46.,  152.]])"
+       "       [ 0.,  0.],\n",
+       "       [ 0.,  0.],\n",
+       "       [ 0.,  0.]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -216,9 +101,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "adj_bip_matrix = np.concatenate((adj_matrix1, adj_matrix2), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt('adj_bip_matrix.txt', adj_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -230,18 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "adj_matrix += adj_matrix.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -249,30 +145,21 @@
     {
      "data": {
       "text/plain": [
-       "3.0"
+       "336"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
-    "LDPC_matrix = np.zeros((1008, 2016))"
+    "np.linalg.matrix_rank(adj_bip_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +183,7 @@
        "       [553, 229, 908, 335], [24, 657, 335, 898]], dtype=object)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,49 +205,6 @@
     "    if len(cycle) < min_len:\n",
     "        min"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "A = np.array([[0,1,1, 0, 0],[1,0,1, 0, 0],[1,1,0, 1, 1], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0]])\n",
-    "ex = nx.from_numpy_matrix(A, create_using=nx.Graph())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 2, 0], [3, 4, 2]]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(nx.cycle_basis(ex))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
