--- a/Information and coding theory/project/project.ipynb
+++ b/Information and coding theory/project/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,34 +30,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.],\n",
-       "       [ 0.,  0.],\n",
-       "       [ 0.,  0.],\n",
-       "       ..., \n",
-       "       [ 0.,  0.],\n",
-       "       [ 0.,  0.],\n",
-       "       [ 0.,  0.]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edges1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {
     "collapsed": false
@@ -73,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -112,32 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "np.savetxt('adj_bip_matrix.txt', adj_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "adj_matrix012 = np.concatenate((zeros, adj_matrix1, adj_matrix2), axis=1)\n",
-    "adj_matrix100 = np.concatenate((zeros, zeros, zeros), axis=1)\n",
-    "adj_matrix200 = np.concatenate((zeros, zeros, zeros), axis=1)\n",
-    "adj_matrix = np.concatenate((adj_matrix012, adj_matrix100, adj_matrix200), axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -145,21 +92,57 @@
     {
      "data": {
       "text/plain": [
-       "336"
+       "(336, 672)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.matrix_rank(adj_bip_matrix)"
+    "matrix = np.loadtxt('margullis_parity_check.txt')\n",
+    "matrix.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "adj_matrix012 = np.concatenate((zeros, matrix), axis=1)\n",
+    "adj_matrix100 = np.concatenate((zeros, zeros, zeros), axis=1)\n",
+    "adj_matrix200 = np.concatenate((zeros, zeros, zeros), axis=1)\n",
+    "adj_matrix = np.concatenate((adj_matrix012, adj_matrix100, adj_matrix200), axis=0)\n",
+    "adj_matrix += adj_matrix.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.,  6.,  6., ...,  3.,  3.,  3.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -170,26 +153,1030 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[613, 329, 986, 285], [657, 329, 986, 285, 908, 335],\n",
-       "       [580, 257, 937, 329], ..., [367, 43, 940, 257],\n",
-       "       [553, 229, 908, 335], [24, 657, 335, 898]], dtype=object)"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "36\n",
+      "22\n",
+      "26\n",
+      "40\n",
+      "24\n",
+      "24\n",
+      "60\n",
+      "54\n",
+      "24\n",
+      "74\n",
+      "88\n",
+      "82\n",
+      "24\n",
+      "102\n",
+      "78\n",
+      "24\n",
+      "114\n",
+      "106\n",
+      "16\n",
+      "26\n",
+      "72\n",
+      "76\n",
+      "54\n",
+      "66\n",
+      "90\n",
+      "76\n",
+      "10\n",
+      "102\n",
+      "126\n",
+      "26\n",
+      "72\n",
+      "76\n",
+      "54\n",
+      "10\n",
+      "66\n",
+      "124\n",
+      "90\n",
+      "76\n",
+      "10\n",
+      "134\n",
+      "102\n",
+      "114\n",
+      "64\n",
+      "124\n",
+      "72\n",
+      "76\n",
+      "54\n",
+      "10\n",
+      "128\n",
+      "66\n",
+      "90\n",
+      "76\n",
+      "10\n",
+      "102\n",
+      "36\n",
+      "114\n",
+      "124\n",
+      "72\n",
+      "76\n",
+      "54\n",
+      "148\n",
+      "10\n",
+      "66\n",
+      "90\n",
+      "76\n",
+      "10\n",
+      "158\n",
+      "102\n",
+      "36\n",
+      "114\n",
+      "124\n",
+      "72\n",
+      "76\n",
+      "152\n",
+      "10\n",
+      "66\n",
+      "90\n",
+      "66\n",
+      "76\n",
+      "10\n",
+      "102\n",
+      "36\n",
+      "114\n",
+      "124\n",
+      "184\n",
+      "182\n",
+      "152\n",
+      "170\n",
+      "10\n",
+      "164\n",
+      "90\n",
+      "66\n",
+      "176\n",
+      "120\n",
+      "170\n",
+      "70\n",
+      "184\n",
+      "40\n",
+      "112\n",
+      "178\n",
+      "116\n",
+      "128\n",
+      "98\n",
+      "190\n",
+      "118\n",
+      "12\n",
+      "42\n",
+      "184\n",
+      "46\n",
+      "78\n",
+      "178\n",
+      "22\n",
+      "66\n",
+      "194\n",
+      "106\n",
+      "46\n",
+      "144\n",
+      "106\n",
+      "74\n",
+      "160\n",
+      "70\n",
+      "102\n",
+      "206\n",
+      "210\n",
+      "68\n",
+      "202\n",
+      "176\n",
+      "162\n",
+      "94\n",
+      "100\n",
+      "100\n",
+      "106\n",
+      "208\n",
+      "68\n",
+      "166\n",
+      "44\n",
+      "218\n",
+      "136\n",
+      "30\n",
+      "196\n",
+      "202\n",
+      "112\n",
+      "10\n",
+      "110\n",
+      "102\n",
+      "70\n",
+      "32\n",
+      "40\n",
+      "222\n",
+      "178\n",
+      "18\n",
+      "114\n",
+      "14\n",
+      "122\n",
+      "76\n",
+      "40\n",
+      "10\n",
+      "64\n",
+      "222\n",
+      "142\n",
+      "182\n",
+      "8\n",
+      "70\n",
+      "208\n",
+      "50\n",
+      "114\n",
+      "18\n",
+      "222\n",
+      "104\n",
+      "148\n",
+      "208\n",
+      "78\n",
+      "164\n",
+      "74\n",
+      "204\n",
+      "102\n",
+      "12\n",
+      "200\n",
+      "192\n",
+      "8\n",
+      "140\n",
+      "16\n",
+      "208\n",
+      "234\n",
+      "120\n",
+      "52\n",
+      "22\n",
+      "56\n",
+      "88\n",
+      "144\n",
+      "224\n",
+      "10\n",
+      "204\n",
+      "218\n",
+      "26\n",
+      "44\n",
+      "50\n",
+      "110\n",
+      "78\n",
+      "16\n",
+      "218\n",
+      "186\n",
+      "126\n",
+      "122\n",
+      "64\n",
+      "52\n",
+      "84\n",
+      "46\n",
+      "10\n",
+      "72\n",
+      "38\n",
+      "150\n",
+      "190\n",
+      "8\n",
+      "78\n",
+      "216\n",
+      "230\n",
+      "122\n",
+      "18\n",
+      "48\n",
+      "46\n",
+      "156\n",
+      "216\n",
+      "86\n",
+      "172\n",
+      "82\n",
+      "36\n",
+      "146\n",
+      "110\n",
+      "12\n",
+      "208\n",
+      "58\n",
+      "8\n",
+      "258\n",
+      "16\n",
+      "216\n",
+      "234\n",
+      "128\n",
+      "222\n",
+      "22\n",
+      "232\n",
+      "34\n",
+      "152\n",
+      "52\n",
+      "10\n",
+      "212\n",
+      "226\n",
+      "26\n",
+      "126\n",
+      "118\n",
+      "86\n",
+      "16\n",
+      "48\n",
+      "154\n",
+      "226\n",
+      "194\n",
+      "134\n",
+      "130\n",
+      "236\n",
+      "92\n",
+      "154\n",
+      "10\n",
+      "112\n",
+      "8\n",
+      "260\n",
+      "194\n",
+      "80\n",
+      "84\n",
+      "92\n",
+      "232\n",
+      "126\n",
+      "156\n",
+      "166\n",
+      "132\n",
+      "20\n",
+      "228\n",
+      "14\n",
+      "12\n",
+      "122\n",
+      "130\n",
+      "216\n",
+      "262\n",
+      "156\n",
+      "100\n",
+      "198\n",
+      "68\n",
+      "174\n",
+      "24\n",
+      "136\n",
+      "60\n",
+      "240\n",
+      "140\n",
+      "38\n",
+      "118\n",
+      "16\n",
+      "20\n",
+      "224\n",
+      "10\n",
+      "216\n",
+      "10\n",
+      "262\n",
+      "24\n",
+      "232\n",
+      "250\n",
+      "144\n",
+      "174\n",
+      "30\n",
+      "178\n",
+      "42\n",
+      "14\n",
+      "232\n",
+      "172\n",
+      "12\n",
+      "96\n",
+      "184\n",
+      "126\n",
+      "72\n",
+      "170\n",
+      "96\n",
+      "150\n",
+      "116\n",
+      "106\n",
+      "248\n",
+      "210\n",
+      "178\n",
+      "264\n",
+      "174\n",
+      "206\n",
+      "220\n",
+      "114\n",
+      "144\n",
+      "10\n",
+      "70\n",
+      "292\n",
+      "198\n",
+      "76\n",
+      "174\n",
+      "130\n",
+      "126\n",
+      "102\n",
+      "216\n",
+      "248\n",
+      "142\n",
+      "14\n",
+      "210\n",
+      "102\n",
+      "286\n",
+      "224\n",
+      "112\n",
+      "150\n",
+      "292\n",
+      "212\n",
+      "298\n",
+      "100\n",
+      "62\n",
+      "44\n",
+      "96\n",
+      "138\n",
+      "210\n",
+      "310\n",
+      "276\n",
+      "296\n",
+      "154\n",
+      "220\n",
+      "174\n",
+      "138\n",
+      "10\n",
+      "162\n",
+      "16\n",
+      "22\n",
+      "94\n",
+      "280\n",
+      "100\n",
+      "8\n",
+      "54\n",
+      "318\n",
+      "168\n",
+      "148\n",
+      "112\n",
+      "210\n",
+      "202\n",
+      "246\n",
+      "302\n",
+      "318\n",
+      "176\n",
+      "262\n",
+      "138\n",
+      "106\n",
+      "142\n",
+      "312\n",
+      "260\n",
+      "298\n",
+      "96\n",
+      "210\n",
+      "174\n",
+      "194\n",
+      "80\n",
+      "130\n",
+      "44\n",
+      "100\n",
+      "86\n",
+      "310\n",
+      "218\n",
+      "230\n",
+      "10\n",
+      "140\n",
+      "188\n",
+      "108\n",
+      "36\n",
+      "186\n",
+      "270\n",
+      "170\n",
+      "166\n",
+      "206\n",
+      "232\n",
+      "80\n",
+      "8\n",
+      "266\n",
+      "130\n",
+      "22\n",
+      "314\n",
+      "194\n",
+      "10\n",
+      "272\n",
+      "284\n",
+      "100\n",
+      "216\n",
+      "212\n",
+      "92\n",
+      "284\n",
+      "112\n",
+      "156\n",
+      "170\n",
+      "314\n",
+      "164\n",
+      "66\n",
+      "96\n",
+      "106\n",
+      "10\n",
+      "276\n",
+      "44\n",
+      "262\n",
+      "134\n",
+      "56\n",
+      "42\n",
+      "122\n",
+      "158\n",
+      "74\n",
+      "262\n",
+      "162\n",
+      "48\n",
+      "140\n",
+      "44\n",
+      "236\n",
+      "282\n",
+      "252\n",
+      "12\n",
+      "8\n",
+      "248\n",
+      "124\n",
+      "290\n",
+      "184\n",
+      "252\n",
+      "40\n",
+      "266\n",
+      "80\n",
+      "90\n",
+      "158\n",
+      "28\n",
+      "116\n",
+      "122\n",
+      "72\n",
+      "194\n",
+      "266\n",
+      "234\n",
+      "50\n",
+      "170\n",
+      "210\n",
+      "276\n",
+      "230\n",
+      "194\n",
+      "10\n",
+      "54\n",
+      "44\n",
+      "274\n",
+      "286\n",
+      "10\n",
+      "94\n",
+      "218\n",
+      "214\n",
+      "86\n",
+      "286\n",
+      "106\n",
+      "158\n",
+      "172\n",
+      "134\n",
+      "146\n",
+      "248\n",
+      "50\n",
+      "42\n",
+      "240\n",
+      "54\n",
+      "286\n",
+      "8\n",
+      "256\n",
+      "28\n",
+      "274\n",
+      "168\n",
+      "198\n",
+      "14\n",
+      "152\n",
+      "46\n",
+      "270\n",
+      "260\n",
+      "12\n",
+      "254\n",
+      "220\n",
+      "318\n",
+      "74\n",
+      "196\n",
+      "40\n",
+      "156\n",
+      "58\n",
+      "260\n",
+      "160\n",
+      "272\n",
+      "276\n",
+      "98\n",
+      "136\n",
+      "238\n",
+      "42\n",
+      "30\n",
+      "144\n",
+      "342\n",
+      "168\n",
+      "310\n",
+      "272\n",
+      "216\n",
+      "182\n",
+      "20\n",
+      "8\n",
+      "28\n",
+      "44\n",
+      "24\n",
+      "140\n",
+      "32\n",
+      "20\n",
+      "210\n",
+      "62\n",
+      "284\n",
+      "178\n",
+      "208\n",
+      "32\n",
+      "104\n",
+      "40\n",
+      "136\n",
+      "76\n",
+      "80\n",
+      "68\n",
+      "34\n",
+      "128\n",
+      "190\n",
+      "164\n",
+      "208\n",
+      "50\n",
+      "154\n",
+      "192\n",
+      "140\n",
+      "154\n",
+      "34\n",
+      "220\n",
+      "248\n",
+      "16\n",
+      "260\n",
+      "200\n",
+      "270\n",
+      "26\n",
+      "310\n",
+      "132\n",
+      "194\n",
+      "58\n",
+      "208\n",
+      "172\n",
+      "256\n",
+      "136\n",
+      "152\n",
+      "192\n",
+      "140\n",
+      "30\n",
+      "326\n",
+      "150\n",
+      "142\n",
+      "188\n",
+      "54\n",
+      "272\n",
+      "166\n",
+      "196\n",
+      "164\n",
+      "44\n",
+      "16\n",
+      "164\n",
+      "250\n",
+      "60\n",
+      "286\n",
+      "106\n",
+      "228\n",
+      "176\n",
+      "34\n",
+      "158\n",
+      "230\n",
+      "266\n",
+      "200\n",
+      "58\n",
+      "162\n",
+      "142\n",
+      "110\n",
+      "10\n",
+      "82\n",
+      "280\n",
+      "114\n",
+      "86\n",
+      "242\n",
+      "52\n",
+      "314\n",
+      "106\n",
+      "290\n",
+      "170\n",
+      "52\n",
+      "282\n",
+      "294\n",
+      "58\n",
+      "180\n",
+      "214\n",
+      "228\n",
+      "162\n",
+      "64\n",
+      "110\n",
+      "74\n",
+      "50\n",
+      "290\n",
+      "236\n",
+      "314\n",
+      "12\n",
+      "246\n",
+      "88\n",
+      "20\n",
+      "40\n",
+      "228\n",
+      "162\n",
+      "50\n",
+      "90\n",
+      "98\n",
+      "168\n",
+      "306\n",
+      "134\n",
+      "50\n",
+      "276\n",
+      "158\n",
+      "234\n",
+      "168\n",
+      "32\n",
+      "74\n",
+      "140\n",
+      "144\n",
+      "66\n",
+      "108\n",
+      "166\n",
+      "194\n",
+      "102\n",
+      "152\n",
+      "166\n",
+      "222\n",
+      "94\n",
+      "210\n",
+      "206\n",
+      "92\n",
+      "156\n",
+      "120\n",
+      "84\n",
+      "264\n",
+      "224\n",
+      "94\n",
+      "180\n",
+      "60\n",
+      "86\n",
+      "180\n",
+      "136\n",
+      "132\n",
+      "204\n",
+      "148\n",
+      "38\n",
+      "264\n",
+      "198\n",
+      "262\n",
+      "256\n",
+      "218\n",
+      "14\n",
+      "16\n",
+      "220\n",
+      "12\n",
+      "214\n",
+      "94\n",
+      "160\n",
+      "150\n",
+      "184\n",
+      "124\n",
+      "126\n",
+      "230\n",
+      "130\n",
+      "24\n",
+      "10\n",
+      "36\n",
+      "108\n",
+      "114\n",
+      "142\n",
+      "8\n",
+      "220\n",
+      "86\n",
+      "184\n",
+      "192\n",
+      "106\n",
+      "114\n",
+      "74\n",
+      "200\n",
+      "210\n",
+      "226\n",
+      "250\n",
+      "10\n",
+      "254\n",
+      "116\n",
+      "124\n",
+      "52\n",
+      "16\n",
+      "68\n",
+      "206\n",
+      "212\n",
+      "12\n",
+      "206\n",
+      "86\n",
+      "46\n",
+      "176\n",
+      "116\n",
+      "106\n",
+      "34\n",
+      "8\n",
+      "212\n",
+      "54\n",
+      "78\n",
+      "176\n",
+      "46\n",
+      "54\n",
+      "88\n",
+      "202\n",
+      "184\n",
+      "98\n",
+      "106\n",
+      "66\n",
+      "192\n",
+      "28\n",
+      "202\n",
+      "204\n",
+      "198\n",
+      "36\n",
+      "168\n",
+      "108\n",
+      "54\n",
+      "214\n",
+      "98\n",
+      "38\n",
+      "98\n",
+      "106\n",
+      "66\n",
+      "192\n",
+      "214\n",
+      "46\n",
+      "14\n",
+      "82\n",
+      "180\n",
+      "74\n",
+      "172\n",
+      "214\n",
+      "122\n",
+      "200\n",
+      "72\n",
+      "122\n",
+      "172\n",
+      "158\n",
+      "118\n",
+      "102\n",
+      "78\n",
+      "116\n",
+      "110\n",
+      "40\n",
+      "36\n",
+      "194\n",
+      "40\n",
+      "14\n",
+      "184\n",
+      "180\n",
+      "100\n",
+      "36\n",
+      "168\n",
+      "14\n",
+      "156\n",
+      "116\n",
+      "180\n",
+      "76\n",
+      "140\n",
+      "8\n",
+      "126\n",
+      "190\n",
+      "128\n",
+      "22\n",
+      "56\n",
+      "186\n",
+      "50\n",
+      "164\n",
+      "34\n",
+      "72\n",
+      "72\n",
+      "10\n",
+      "78\n",
+      "120\n",
+      "54\n",
+      "120\n",
+      "72\n",
+      "156\n",
+      "116\n",
+      "140\n",
+      "8\n",
+      "126\n",
+      "128\n",
+      "48\n",
+      "28\n",
+      "22\n",
+      "56\n",
+      "50\n",
+      "66\n",
+      "34\n",
+      "72\n",
+      "10\n",
+      "78\n",
+      "120\n",
+      "54\n",
+      "120\n",
+      "72\n",
+      "58\n",
+      "116\n",
+      "136\n",
+      "146\n",
+      "140\n",
+      "8\n",
+      "126\n",
+      "128\n",
+      "152\n",
+      "48\n",
+      "28\n",
+      "22\n",
+      "150\n",
+      "66\n",
+      "34\n",
+      "72\n",
+      "134\n",
+      "10\n",
+      "78\n",
+      "120\n",
+      "120\n",
+      "72\n",
+      "58\n",
+      "116\n",
+      "146\n",
+      "42\n",
+      "70\n",
+      "150\n",
+      "8\n",
+      "126\n",
+      "28\n",
+      "22\n",
+      "126\n",
+      "66\n",
+      "72\n",
+      "144\n",
+      "72\n",
+      "10\n",
+      "78\n",
+      "136\n",
+      "72\n",
+      "58\n",
+      "116\n",
+      "38\n",
+      "42\n",
+      "8\n",
+      "28\n",
+      "30\n",
+      "136\n",
+      "66\n",
+      "72\n",
+      "72\n",
+      "10\n",
+      "78\n",
+      "22\n",
+      "126\n",
+      "22\n",
+      "72\n",
+      "58\n",
+      "18\n",
+      "38\n",
+      "108\n",
+      "42\n",
+      "8\n",
+      "28\n",
+      "30\n",
+      "66\n",
+      "72\n",
+      "10\n",
+      "68\n",
+      "84\n",
+      "64\n",
+      "106\n",
+      "100\n",
+      "108\n",
+      "102\n",
+      "78\n",
+      "10\n",
+      "12\n",
+      "102\n",
+      "50\n",
+      "40\n",
+      "14\n",
+      "26\n",
+      "22\n",
+      "50\n",
+      "106\n",
+      "36\n",
+      "10\n",
+      "54\n",
+      "8\n",
+      "92\n",
+      "88\n",
+      "54\n",
+      "100\n",
+      "68\n",
+      "92\n",
+      "64\n",
+      "10\n",
+      "12\n",
+      "82\n",
+      "50\n",
+      "40\n",
+      "14\n",
+      "26\n",
+      "22\n",
+      "50\n",
+      "36\n",
+      "10\n",
+      "54\n",
+      "8\n",
+      "20\n",
+      "54\n",
+      "72\n",
+      "82\n",
+      "86\n",
+      "10\n",
+      "12\n",
+      "50\n",
+      "40\n",
+      "14\n",
+      "26\n",
+      "22\n",
+      "50\n",
+      "36\n",
+      "10\n",
+      "8\n",
+      "20\n",
+      "70\n",
+      "10\n",
+      "12\n",
+      "48\n",
+      "62\n",
+      "40\n",
+      "14\n",
+      "26\n",
+      "22\n",
+      "36\n",
+      "10\n",
+      "8\n",
+      "20\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "26\n",
+      "22\n",
+      "10\n",
+      "8\n",
+      "20\n",
+      "40\n",
+      "10\n",
+      "14\n",
+      "30\n",
+      "10\n",
+      "8\n",
+      "18\n",
+      "14\n",
+      "28\n",
+      "22\n",
+      "22\n",
+      "12\n",
+      "14\n"
+     ]
     }
    ],
    "source": [
-    "np.array(nx.cycle_basis(g))"
+    "for cycle in np.array(nx.cycle_basis(g)):\n",
+    "    print (len(cycle))"
    ]
   },
   {
