--- a/Information and coding theory/project/project.ipynb
+++ b/Information and coding theory/project/project.ipynb
@@ -16,75 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "edges1_str = pd.read_csv('sl27edges1.txt')\n",
-    "edges1 = np.zeros((1008, 2))\n",
-    "edges2_str = pd.read_csv('sl27edges2.txt')\n",
-    "edges2 = np.zeros((1008, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(1008):\n",
-    "    edges1[i][0] = int(edges1_str['1'][i].replace('(', ''))\n",
-    "    edges1[i][1] = int(edges1_str[' 2'][i].replace(')', ''))\n",
-    "    edges2[i][0] = int(edges2_str['1'][i].replace('(', ''))\n",
-    "    edges2[i][1] = int(edges2_str[' 2'][i].replace(')', ''))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "adj_matrix1 = np.zeros((336, 336))\n",
-    "adj_matrix2 = np.zeros((336, 336))\n",
-    "zeros = np.zeros((336, 336))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(1008):\n",
-    "    pair1 = edges1[i]\n",
-    "    pair2 = edges2[i]\n",
-    "    adj_matrix1[int(pair1[0]), int(pair1[1])] = 1\n",
-    "    adj_matrix2[int(pair2[0]), int(pair2[1])] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "adj_bip_matrix = np.concatenate((adj_matrix1, adj_matrix2), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -95,24 +27,32 @@
        "(336, 672)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# read\n",
+    "\n",
     "matrix = np.loadtxt('margullis_parity_check.txt')\n",
     "matrix.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# adjacency matrix\n",
+    "\n",
+    "adj_matrix1 = np.zeros((336, 336))\n",
+    "adj_matrix2 = np.zeros((336, 336))\n",
+    "zeros = np.zeros((336, 336))\n",
+    "\n",
     "adj_matrix012 = np.concatenate((zeros, matrix), axis=1)\n",
     "adj_matrix100 = np.concatenate((zeros, zeros, zeros), axis=1)\n",
     "adj_matrix200 = np.concatenate((zeros, zeros, zeros), axis=1)\n",
@@ -122,38 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6.,  6.,  6., ...,  3.,  3.,  3.])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# graph \n",
     "g = nx.from_numpy_matrix(adj_matrix, create_using=nx.Graph())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
